syntax = "proto3";
option go_package = "./proto";
//package org.example.apigateway.grpc;

//option java_outer_classname = "AgencyOuterClass";
option java_package = "org.example.apigateway.grpc.agency";

package agency;

service Agency {
  rpc GetAgencies(GetAgenciesRequest) returns (GetAgenciesResponse);
  rpc GetAgency(GetAgencyRequest) returns (GetAgencyResponse);
  rpc CreateAgency(CreateAgencyRequest) returns (CreateAgencyResponse);
  rpc UpdateAgency(UpdateAgencyRequest) returns (UpdateAgencyResponse);
  rpc DeleteAgency(DeleteAgencyRequest) returns (DeleteAgencyResponse);
}

message AgencyItem{
  string id = 1;
  string name = 2;
  string plan = 3;
  repeated OfferItem offers = 4;
  string description = 5;
}

message GetAgenciesRequest{
}

message GetAgenciesResponse{
  repeated AgencyItem agencies = 1;
}

message GetAgencyRequest{
  string name = 1;
}

message GetAgencyResponse{
  string id = 1;
  string name = 2;
  string plan = 3;
  repeated OfferItem offers = 4;
  string description = 5;
}

message CreateAgencyRequest{
  string name = 1;
  string plan = 2;
  string description = 3;
}

message CreateAgencyResponse{
  string name = 1;
  string plan = 2;
  string description = 3;
}

message UpdateAgencyRequest{
  string id = 1;
  string name = 2;
  string plan = 3;
  string description = 5;
}

message UpdateAgencyResponse{
  string id = 1;
  string name = 2;
  string plan = 3;
  repeated OfferItem offers = 4;
  string description = 5;
}

message DeleteAgencyRequest{
  string id = 1;
}

message DeleteAgencyResponse{
  string id = 1;
  string name = 2;
  string plan = 3;
  repeated OfferItem offers = 4;
  string description = 5;
}


message OfferItem{
  string id = 1;
  string name = 2;
  AgencyItem agency_id = 3;
  string description = 4;
  int32 price = 5;
  string date = 6;
  int32 rating = 7;
  OfferType type = 8;
}

enum  OfferType {
  Normal = 0;
  Special = 1;
  Important = 2;
  Ultimate = 3;
}